added webpack to bundle and minify

--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/fede03billy/hider/issues"
   },
-  "homepage": "https://github.com/fede03billy/hider#readme"
+  "homepage": "https://github.com/fede03billy/hider#readme",
+  "devDependencies": {
+    "path": "^0.12.7",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
+  }
 }
