--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hider",
-  "version": "0.0.1",
+  "name": "simple-hider",
+  "version": "0.0.2",
   "description": "A simple encrypt-decrypt tool.",
   "main": "index.js",
   "type": "module",
@@ -19,11 +19,5 @@
   "bugs": {
     "url": "https://github.com/fede03billy/hider/issues"
   },
-  "homepage": "https://github.com/fede03billy/hider#readme",
-  "devDependencies": {
-    "path": "^0.12.7",
-    "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
-  }
+  "homepage": "https://github.com/fede03billy/hider#readme"
 }
